--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
-fastapi
-uvicorn
-pandas
-autogluon.tabular
+fastapi==0.110.0
+uvicorn==0.27.1
+pandas==2.1.4
+numpy==1.26.4
+autogluon.tabular==0.8.2
 python-multipart
